--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -76,6 +76,12 @@
     <Compile Include="frmSchool.Designer.cs">
       <DependentUpon>frmSchool.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmstudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmstudent.Designer.cs">
+      <DependentUpon>frmstudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSchool.resx">
       <DependentUpon>frmSchool.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmstudent.resx">
+      <DependentUpon>frmstudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
