--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="classForm.Designer.cs">
+      <DependentUpon>classForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBUtils.cs" />
     <Compile Include="DB_SMISDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -82,8 +88,23 @@
     <Compile Include="frmstudent.Designer.cs">
       <DependentUpon>frmstudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="majorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="majorForm.Designer.cs">
+      <DependentUpon>majorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="studentSelect.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="studentSelect.Designer.cs">
+      <DependentUpon>studentSelect.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="classForm.resx">
+      <DependentUpon>classForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -96,6 +117,9 @@
     <EmbeddedResource Include="frmstudent.resx">
       <DependentUpon>frmstudent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="majorForm.resx">
+      <DependentUpon>majorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -105,6 +129,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="studentSelect.resx">
+      <DependentUpon>studentSelect.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="DB_SMISDataSet.xsc">
       <DependentUpon>DB_SMISDataSet.xsd</DependentUpon>
     </None>
